added miway page

--- a/taskpaddy.html
+++ b/taskpaddy.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TaskPaddy</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -40,6 +41,39 @@
         </button>
     </div>
                    
+
+<div class="miway-section container">
+    <header class="miway-header mb-4">
+        <svg xmlns="http://www.w3.org/2000/svg" width="60" height="80" fill="currentColor" class="bi bi-tools" viewBox="0 0 16 16">
+        <path d="M1 0 0 1l2.2 3.081a1 1 0 0 0 .815.419h.07a1 1 0 0 1 .708.293l2.675 2.675-2.617 2.654A3.003 3.003 0 0 0 0 13a3 3 0 1 0 5.878-.851l2.654-2.617.968.968-.305.914a1 1 0 0 0 .242 1.023l3.27 3.27a.997.997 0 0 0 1.414 0l1.586-1.586a.997.997 0 0 0 0-1.414l-3.27-3.27a1 1 0 0 0-1.023-.242L10.5 9.5l-.96-.96 2.68-2.643A3.005 3.005 0 0 0 16 3q0-.405-.102-.777l-2.14 2.141L12 4l-.364-1.757L13.777.102a3 3 0 0 0-3.675 3.68L7.462 6.46 4.793 3.793a1 1 0 0 1-.293-.707v-.071a1 1 0 0 0-.419-.814zm9.646 10.646a.5.5 0 0 1 .708 0l2.914 2.915a.5.5 0 0 1-.707.707l-2.915-2.914a.5.5 0 0 1 0-.708M3 11l.471.242.529.026.287.445.445.287.026.529L5 13l-.242.471-.026.529-.445.287-.287.445-.529.026L3 15l-.471-.242L2 14.732l-.287-.445L1.268 14l-.026-.529L1 13l.242-.471.026-.529.445-.287.287-.445.529-.026z"/>
+        </svg>
+        <h3>TaskPaddy</h3>
+    </header>
+
+    <section class="mb-4">
+        <div class="container">
+            <h5>Challenge</h5>
+            <p>Finding a reliable service provider was a daunting task for customers, as most operated solely by word of mouth. To address this, the goal was to create a platform where customers could easily connect with the right service provider by simply creating a task and finding someone to complete it. The client provided initial wireframes to convey their ideas, and my role was to develop both an MVP and a scalable version of the app.</p>
+
+        </div>
+    </section>
+
+    <section class="mb-4">
+        <div class="container">
+            <h5>My Role</h5>
+            <p>Managing and collaborating with a 5-person tech team, consisting of frontend and backend developers, holding weekly meetings to ensure alignment with the vision, strategy, and design processes. A key focus is ensuring that frontend designs are consistent with the user interface designs. I conducted extensive user research to uncover target needs, identify problems, and explore potential solutions. Additionally, I will continuously test the prototype and product with potential users in Ghana, Kenya, and Uganda.</p>
+
+        </div>
+    </section>
+
+
+</div>
+
+
+
+
+
+
 
 
   <!-- Footer -->
