--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       </button>
 
       <!-- GitHub Link -->
-      <button class="theme-btn icon-btn" onclick="window.open('https://github.com/emerald-adjei', '_blank')">
+      <button class="theme-btn icon-btn" onclick="window.open('https://github.com/enyadjei/', '_blank')">
         <svg viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
           <path d="M12 0c-6.626 0-12 5.373-12 12 0 5.302 3.438 9.8 8.207 11.387.599.111.793-.261.793-.577v-2.234c-3.338.726-4.033-1.416-4.033-1.416-.546-1.387-1.333-1.756-1.333-1.756-1.089-.745.083-.729.083-.729 1.205.084 1.839 1.237 1.839 1.237 1.07 1.834 2.807 1.304 3.492.997.107-.775.418-1.305.762-1.604-2.665-.305-5.467-1.334-5.467-5.931 0-1.311.469-2.381 1.236-3.221-.124-.303-.535-1.524.117-3.176 0 0 1.008-.322 3.301 1.23.957-.266 1.983-.399 3.003-.404 1.02.005 2.047.138 3.006.404 2.291-1.552 3.297-1.23 3.297-1.23.653 1.653.242 2.874.118 3.176.77.84 1.235 1.911 1.235 3.221 0 4.609-2.807 5.624-5.479 5.921.43.372.823 1.102.823 2.222v3.293c0 .319.192.694.801.576 4.765-1.589 8.199-6.086 8.199-11.386 0-6.627-5.373-12-12-12z" fill="#1C274C"/>
         </svg>
@@ -48,7 +48,7 @@
 
           <div class="d-flex flex-column flex-md-row gap-3 mb-4">
             <a class="cta-btn primary" href="https://www.linkedin.com/in/emerald-adjei/" target="_blank">
-              <i class="bi bi-linkedin me-2"></i> Contact Me on LinkedIn
+              <i class="bi bi-linkedin me-2"></i> Let's Connect on LinkedIn
             </a>
             <a class="cta-btn secondary" href="portfolio.html">
               <i class="bi bi-journals me-2"></i> Check Out my Work
@@ -111,14 +111,19 @@
     </div>
   </section>
 
-  <hr>
+ 
 
   <!-- Footer -->
-  <footer class="container text-center py-3">
-    <p class="mb-0">
-      <i class="bi bi-c-circle me-1"></i> 2025 Emerald Adjei. All rights reserved.
-    </p>
-  </footer>
+  <div class="container">
+        <hr>
+        <div class="footer text-center">
+            <div class="copyright">
+                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-c-circle me-1" viewBox="0 0 16 16">
+                    <path d="M1 8a7 7 0 1 0 14 0A7 7 0 0 0 1 8m15 0A8 8 0 1 1 0 8a8 8 0 0 1 16 0M8.146 4.992c-1.212 0-1.927.92-1.927 2.502v1.06c0 1.571.703 2.462 1.927 2.462.979 0 1.641-.586 1.729-1.418h1.295v.093c-.1 1.448-1.354 2.467-3.03 2.467-2.091 0-3.269-1.336-3.269-3.603V7.482c0-2.261 1.201-3.638 3.27-3.638 1.681 0 2.935 1.054 3.029 2.572v.088H9.875c-.088-.879-.768-1.512-1.729-1.512"/>
+                </svg>2025 Emerald Adjei. All rights reserved.
+            </div>
+        </div>
+    </div>
 
   <script src="main.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
