--- a/portfolio.html
+++ b/portfolio.html
@@ -34,7 +34,7 @@
         </button>
 
         <!-- Link to Github -->
-        <button class="theme-btn icon-btn" onclick="window.open('https://github.com/emerald-adjei', '_blank')">
+        <button class="theme-btn icon-btn" onclick="window.open('https://github.com/enyadjei/', '_blank')">
             <svg viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path d="M12 0c-6.626 0-12 5.373-12 12 0 5.302 3.438 9.8 8.207 11.387.599.111.793-.261.793-.577v-2.234c-3.338.726-4.033-1.416-4.033-1.416-.546-1.387-1.333-1.756-1.333-1.756-1.089-.745.083-.729.083-.729 1.205.084 1.839 1.237 1.839 1.237 1.07 1.834 2.807 1.304 3.492.997.107-.775.418-1.305.762-1.604-2.665-.305-5.467-1.334-5.467-5.931 0-1.311.469-2.381 1.236-3.221-.124-.303-.535-1.524.117-3.176 0 0 1.008-.322 3.301 1.23.957-.266 1.983-.399 3.003-.404 1.02.005 2.047.138 3.006.404 2.291-1.552 3.297-1.23 3.297-1.23.653 1.653.242 2.874.118 3.176.77.84 1.235 1.911 1.235 3.221 0 4.609-2.807 5.624-5.479 5.921.43.372.823 1.102.823 2.222v3.293c0 .319.192.694.801.576 4.765-1.589 8.199-6.086 8.199-11.386 0-6.627-5.373-12-12-12z" fill="#1C274C"/>
             </svg>
@@ -64,8 +64,8 @@
                     A project to research and digitise the traditional Savings collection process.
                     Transforming it into a modern, user-friendly mobile application.
                 </p>
-                <a href="vsla.html" class="d-flex align-items-center fw-semibold text-decoration-none">
-                    <i class="bi bi-bar-chart me-3"></i> About the VSLA App
+                <a href="vsla.html" class="d-flex align-items-center fw-semibold" style="color:rgb(46, 46, 46)">
+                    <i class="bi bi-bar-chart me-2"></i> About the VSLA App
                 </a>
                 </div>
             </div>
@@ -80,8 +80,8 @@
                 <p class="card-text">
                     Connecting customers with the right service provider by creating a task and finding a provider to complete it.
                 </p>
-                <a href="taskpaddy.html" class="d-flex align-items-center fw-semibold text-decoration-none">
-                    <i class="bi bi-tools me-3"></i> About the TaskPaddy App
+                <a href="taskpaddy.html" class="d-flex align-items-center fw-semibold" style="color:rgb(46, 46, 46)">
+                    <i class="bi bi-tools me-2"></i> About the TaskPaddy App
                 </a>
                 </div>
             </div>
@@ -89,8 +89,7 @@
 
         </div>
 
-        <div class="row g-4">
-            
+        <div class="row g-4 mt-4">
             <!-- Card 1 -->
             <div class="col-md-6">
             <div class="card border-0">
@@ -100,8 +99,8 @@
                 <p class="card-text">
                     Identifying and validating causes of premium collection issues and designed an optimised premium collection service as a self-service payment system taking into consideration the main pain points of the customer.
                 </p>
-                <a href="miway.html" class="d-flex align-items-center fw-semibold text-decoration-none">
-                    <i class="bi bi-bar-chart me-3"></i> About the miWay Product
+                <a href="miway.html" class="d-flex align-items-center fw-semibold" style="color:rgb(46, 46, 46)">
+                    <i class="bi bi-bar-chart me-2"></i> About the miWay Product
                 </a>
                 </div>
             </div>
@@ -128,6 +127,7 @@
 
   <!-- Footer -->
     <div class="container">
+        <hr>
         <div class="footer text-center">
             <div class="copyright">
                 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-c-circle me-1" viewBox="0 0 16 16">
