added imagesto taskpaddy page

--- a/taskpaddy.html
+++ b/taskpaddy.html
@@ -66,6 +66,193 @@
         </div>
     </section>
 
+    <section class="mb-4">
+        <div class="container">
+            <h6>The Problem</h6>
+            <div class="d-flex flex-column gap-2">
+                <div class="stat-card">
+                    <i class="bi bi-flag-fill me-2"></i>
+                    <span>Service providers have only a small niche and are not able to earn enough money to grow and expand their businesses.</span>
+                </div>
+
+                <div class="stat-card">
+                    <i class="bi bi-flag-fill me-2"></i>
+                    <span>Customers are limited the the few Service Providers in their circle and sometimes fail to find the right one.</span>
+                </div>
+
+                <div class="stat-card">
+                    <i class="bi bi-flag-fill me-2"></i>
+                    <span>Customers thus have to manage the mediocre service providers around them because there is simply no option.</span>
+                </div>
+
+                <div class="stat-card">
+                    <i class="bi bi-flag-fill me-2"></i>
+                    <span>There is no warranty a stranger walking into the life of a family will compromise their safety.</span>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="mb-4">
+        <div class="container">
+            <h6>Potential Solutions</h6>
+            <div class="d-flex flex-column gap-2">
+                <div class="stat-card">
+                    <i class="bi bi-bag-check-fill me-2"></i>
+                    <span>Create a platform to advertise service providers, increase their reach and widen their niche.</span>
+                </div>
+
+                <div class="stat-card">
+                    <i class="bi bi-bag-check-fill me-2"></i>
+                    <span>Provide customers with options to hire service providers most suited to their taste.</span>
+                </div>
+
+                <div class="stat-card">
+                    <i class="bi bi-bag-check-fill me-2"></i>
+                    <span>Create an atmosphere of competitiveness for service providers to increase the quality of services.</span>
+                </div>
+
+                <div class="stat-card">
+                    <i class="bi bi-bag-check-fill me-2"></i>
+                    <span>Create trust between service providers and customers through features and policies that protect both parties and ensure agreements are fulfilled.</span>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="mb-4">
+        <div class="container">
+            <h6>Design Principles</h6>
+            <div class="d-flex flex-column gap-2">
+                <div class="stat-card">
+                    <!-- <i class="bi bi-emoji-smile-fill me-2" style="color: rgb(234, 211, 8);"></i>
+                    <span>Simplicity <br>With the target market in mind, the aim is to make the flow and concepts of the app easy to understand and navigate. Customers and service providers need to focus on getting task done, not spending time figuring out how the app works.</span> -->
+
+                    <img src="img/eyes.png" alt="Simplicity icon" class="me-2" style="width: 1.2em; height: 1.2em; vertical-align: middle;">
+<span>Simplicity <br>With the target market in mind, the aim is to make the flow and concepts of the app easy to understand and navigate. Customers and service providers need to focus on getting task done, not spending time figuring out how the app works.</span>
+                </div>
+
+                <div class="stat-card">
+                    <i class="bi bi-lightbulb me-2"></i>
+                    <span>Visibility and Clarity of Flow <br> As the flows require multiple steps and responses, service providers and customers should be able to tell what inputs they have provided or should provide at any point in time.</span>
+                </div>
+
+                <div class="stat-card">
+                    <i class="bi bi-lightbulb me-2"></i>
+                    <span>Error Prevention <br> The design decisions had to make it harder for preventable user errors to occur. If a mistake is made, it should be easy for users to take back that decision.</span>
+                </div>
+
+                <div class="stat-card">
+                    <i class="bi bi-lightbulb me-2"></i>
+                    <span>Familiarity <br> With multiple apps come interfaces people prefer, design decisions were made to create interfaces and patterns users are familiar with for ease of use as completely new and unfamiliar designs negate simplicity and visibility.</span>
+                </div>
+            </div>
+        </div>
+    </section>
+
+
+    <section class="mb-4">
+        <div class="container">
+            <h6>Key Features</h6>
+            <div class="d-flex flex-column gap-2">
+                <div class="stat-card">
+                    <i class="bi bi-lightbulb me-2"></i>
+                    <span>Business and Services <br> Ability to easily create a list of businesses, services provided and its associated prices. </span>
+                </div>
+
+                <div class="stat-card">
+                    <i class="bi bi-lightbulb me-2"></i>
+                    <span>Service Categorization <br> Ability to easily categorize services and provide the right details needed for pricing. </span>
+                </div>
+
+                <div class="stat-card">
+                    <i class="bi bi-lightbulb me-2"></i>
+                    <span>Dashboard <br> Easily accessed dashboard with details of business, upcoming tasks, total tasks and hires.</span>
+                </div>
+
+                <div class="stat-card">
+                    <i class="bi bi-lightbulb me-2"></i>
+                    <span>Analytics <br> Provide high level analytics of hires, tasks statistics and earnings made. </span>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="mb-4">
+        <div class="mb-3">
+            <h5>Heuristic Evaluation and Audit</h5>
+
+            <img src="img/111.png" alt="" style="width: 100%;">
+        </div>
+    </section>
+
+    
+    <section class="mb-4">
+        <div class="container">
+            <h6>Key Features</h6>
+            <div class="d-flex flex-column gap-2">
+                <div class="stat-card">
+                    <i class="bi bi-1-circle-fill"></i>
+                    <span>Colored outline is overshadowing the image. </span>
+                </div>
+
+                <div class="stat-card">
+                    <i class="bi bi-2-circle-fill"></i>
+                    <span>There isn’t a clear option that users can copy directly from the card. Find a familiar way of displaying the option to copy the completion code.</span>
+                </div>
+
+                <div class="stat-card">
+                    <i class="bi bi-3-circle-fill"></i>
+                    <span>It is unclear that users cannot open the message feature by clicking the link. It is also not intuitive and a proper notification system will be optimal.</span>
+                </div>
+
+                <div class="stat-card">
+                    <i class="bi bi-4-circle-fill"></i>
+                    <span>Familiarity with FABs tell users otherwise from opening up a calendar. Calendar option should be more prominent and concise as it is an important feature.</span>
+                </div>
+
+                <div class="stat-card">
+                    <i class="bi bi-5-circle-fill"></i>
+                    <span>General white spacing was out of place and unaligned.</span>
+                </div>
+
+                <div class="stat-card">
+                    <i class="bi bi-6-circle-fill"></i>
+                    <span>Button doesn’t draw the attention it needs to draw as it becomes a primary option after completion of task, the button needs to be a lot clearer.</span>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="mb-4">
+        <div class="mb-3">
+            <h5>Creating a Task - Customer</h5>
+            <p>After setting up a profile, the customers creates their first task. They might need to add comments for extra information and upload pictures to assist the service provider in making the right call.</p>
+
+            <img src="img/222.png" alt="" style="width: 100%;">
+        </div>
+    </section>
+
+    <section class="mb-4">
+        <div class="mb-3">
+            <h5>Accepting Task - Service Provider</h5>
+            <p>By receiving a task request, service provider can either accept or decline the task, if they accept, it is added to the task list. Upon completion of task, the customer pays using a preferred payment method. If cash is selected, the service provider would have to confirm the payment. </p>
+
+            <img src="img/333.png" alt="" style="width: 100%;">
+        </div>
+    </section>
+
+    <section class="mb-4">
+        <div class="mb-3">
+            <h5>Grievance</h5>
+            <p>The provision of service can sometimes come with grievances where a customer may not be satisfied with service provided. A feature was thus designed to take care of this if it arises. The service provider is given the option of either rectifying the situation or paying a refund to the customer.</p>
+
+            <img src="img/444.png" alt="" style="width: 100%;">
+        </div>
+    </section>
+
+
+
 
 </div>
 
